--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <nav>
                     <a class="header--nav--link" href="#">My accounts</a>
                     <a class="header--nav--link" href="#">Settings</a>
-                    <a class="header--nav--link" href="">Sign Up</a>
-                    <a class="header--nav--link" href="#">Log in</a>
+                    <a class="header--nav--link" href="#">Nav ex.</a>
+                    <a class="header--nav--link" href="#">Nav ex.</a>
                 </nav>
             </div>
         </div>
@@ -41,13 +41,13 @@
                     <p class="section--title">Currency Rate</p>
                     <wrapper class="wrapper--currencyRate">
                         <ul>
-                            <li>Currency Ex.</li>
-                            <li>Currency Ex.</li>
-                            <li>Currency Ex.</li>
-                            <li>Currency Ex.</li>
-                            <li>Currency Ex.</li>
-                            <li>Currency Ex.</li>
-                            <li>Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
+                            <li class="currency--li">Currency Ex.</li>
                         </ul>
                     </wrapper>
                 </section>
@@ -56,8 +56,8 @@
                     <wrapper class="wrapper--balance">
                         <div class="bank--balance">
                             <img class="bank--logo" src="./assets/icons/monobank-icon.jpeg" alt="monobank-icon">
-                            <div class="bank--name">Monobank:</div>
-                            <div class="bank--balance" id="balance"></div>
+                                <!-- <div class="bank--name">Monobank:</div>
+                                <div class="bank--balance" id="balance"></div> -->
                         </div>
                     </wrapper>
                 </section>
