--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
                 <section class="section--currencyRate">
                     <p class="section--title">Currency Rate</p>
                     <wrapper class="wrapper--currencyRate">
-                        <ul>
-                            <li class="currency--li">Currency Ex.</li>
-                            <li class="currency--li">Currency Ex.</li>
-                            <li class="currency--li">Currency Ex.</li>
-                            <li class="currency--li">Currency Ex.</li>
-                            <li class="currency--li">Currency Ex.</li>
-                            <li class="currency--li">Currency Ex.</li>
-                            <li class="currency--li">Currency Ex.</li>
-                        </ul>
+                        <table class="table--currencyRate" id="currencyRate">
+                            <thead>
+                                <th colspan="2"></th>
+                                <th>Buy</th>
+                                <th>Sell</th>
+                            </thead>
+                        </table>
                     </wrapper>
                 </section>
                 <section class="section--balance">
@@ -56,7 +54,7 @@
                     <wrapper class="wrapper--balance">
                         <div class="bank--balance">
                             <img class="bank--logo" src="./assets/icons/monobank-icon.jpeg" alt="monobank-icon">
-                                <!-- <div class="bank--name">Monobank:</div>
+                            <!-- <div class="bank--name">Monobank:</div>
                                 <div class="bank--balance" id="balance"></div> -->
                         </div>
                     </wrapper>
