--- a/index.html
+++ b/index.html
@@ -24,27 +24,28 @@
                 </svg>
                 <div class="header--logo">T-Wallet</div>
             </div>
-            <div class="header--nav--block">
-                <nav>
-                    <a class="header--nav--link" href="#">My accounts</a>
+            <div>
+                <nav class="header--nav--block">
+                    <a class="header--nav--link" href="#">Transactions</a>
+                    <a class="header--nav--link" href="#">All accounts</a>
                     <a class="header--nav--link" href="#">Settings</a>
-                    <a class="header--nav--link" href="#">Nav ex.</a>
-                    <a class="header--nav--link" href="#">Nav ex.</a>
+                    <a class="header--nav--link" href="#">*placeholder*</a>
                 </nav>
             </div>
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container main">
             <wrapper class="wrapper--main">
                 <section class="section--currencyRate">
                     <p class="section--title">Currency Rate</p>
                     <wrapper class="wrapper--currencyRate">
                         <table class="table--currencyRate" id="currencyRate">
                             <thead>
-                                <th colspan="2"></th>
-                                <th>Buy</th>
+                                <th></th>
                                 <th>Sell</th>
+                                <th>Buy</th>
+                                <th></th>
                             </thead>
                         </table>
                     </wrapper>
